<resources>
    <string name="app_name">MovieList</string>
    <string name="movie_image">Picture</string>
    <string name="button_details">Details</string>
    <string name="tools_name">Title</string>
    <string name="invite_friend">Invite friend</string>
    <string name="try_app">Let\'s try our new app with movie list!</string>
    <string name="is_liked">Like</string>
    <string name="comment">Comment</string>
    <string name="dialog_exit_title">Advanced exit</string>
    <string name="dialog_exit_text">Are you sure want to exit?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>
    <string name="theme">Theme</string>
    <string name="is_favorite">In favorite</string>
    <string name="favorites">Favorites</string>
    <string name="title_favorites">Favorites</string>
    <string name="new_movie">New movie</string>
    <string name="new_movie_title">Movie title</string>
    <string name="new_movie_description">Description</string>
    <string name="empty_title">You should fill title</string>
    <string name="empty_description">You should fill description</string>
    <string name="title_new_movie">New movie</string>
    <string name="menu_done">Done</string>
    <string name="movie_list">Movie list</string>
    <string name="cancel">Cancel</string>
    <string name="favorites_added">Added to favorites</string>
    <string name="favorites_removed">Removed from favorites</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="rating">rating</string>
    <string name="error_loading">Error loading list, please try again</string>
    <string name="retry">Retry</string>
    <string name="factory_message">test factory message</string>
    <string name="postpone">Postpone watching</string>
    <string name="postpone_notification_channel_name">Postponed movie reminder</string>
    <string name="postpone_notification_channel_description">Postponed movie reminder</string>
    <string name="title_reminder">Postpone reminder</string>
    <string name="time_to_watch">It\'s a time to watch</string>
    <string name="nav_postponed">Postponed</string>
    <string name="title_postponed">Postponed</string>
    <string name="make_exception">Exception</string>
    <string name="detailed_notification_channel_name">Movie information</string>
    <string name="detailed_notification_channel_description">New movie notification</string>
    <string name="title_detailed">New movie</string>
    <string name="text_detailed">We are recommend to view movie</string>
    <string name="buy_paid">Buy paid version</string>
</resources>
